--- a/filemanager-0.5/res/layout/dialog_edittext.xml
+++ b/filemanager-0.5/res/layout/dialog_edittext.xml
@@ -20,7 +20,6 @@
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
@@ -37,8 +36,7 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textUri"
-        android:singleLine="true"
-        tools:ignore="LabelFor">
+        android:singleLine="true" >
 
         <requestFocus />
     </EditText>
