--- a/filemanager-0.5/res/layout/fragment_list.xml
+++ b/filemanager-0.5/res/layout/fragment_list.xml
@@ -20,6 +20,7 @@
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -51,7 +52,8 @@
             android:id="@+id/progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="#CDDC39" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -61,6 +63,12 @@
             android:layout_gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/loading_" />
+
+        <ImageButton
+            android:id="@+id/imageButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_launcher" />
     </LinearLayout>
 
 </LinearLayout>
