--- a/filemanager-0.5/res/layout/fragment_list.xml
+++ b/filemanager-0.5/res/layout/fragment_list.xml
@@ -20,7 +20,6 @@
   CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layoutlist"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -52,8 +51,7 @@
             android:id="@+id/progress"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="#CDDC39" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/tvMessage"
@@ -63,12 +61,6 @@
             android:layout_gravity="center_vertical"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/loading_" />
-
-        <ImageButton
-            android:id="@+id/imageButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_launcher" />
     </LinearLayout>
 
 </LinearLayout>
