--- a/filemanager-0.5/res/menu/folder_browser.xml
+++ b/filemanager-0.5/res/menu/folder_browser.xml
@@ -35,14 +35,14 @@
         android:showAsAction="ifRoom"
         android:title="@string/add_favourite"
         android:visible="false"/>
-
+    
     <item
         android:id="@+id/menu_navigate_up"
-        android:icon="@android:drawable/arrow_up_float"
+        android:icon="@drawable/ic_navigate_up"
         android:orderInCategory="0"
         android:showAsAction="always"
         android:title="@string/up"
-        android:visible="true" />
+        android:visible="true"/>
     
     <item
         android:id="@+id/menu_refresh"
@@ -66,13 +66,7 @@
         android:showAsAction="ifRoom"
         android:title="@string/select_all"
         android:visible="true"/>
-
-    <item
-        android:id="@+id/app_bar_search"
-        android:actionViewClass="android.widget.SearchView"
-        android:icon="@drawable/ic_search_black_24dp"
-        android:orderInCategory="6"
-        android:title="Search" />
+    
     <item
         android:id="@+id/menu_create_folder"
         android:icon="@drawable/ic_create_folder"
